[project]
name = "NATTEN"
description = "Neighborhood Attention Extension"
dynamic = ["version"]
authors = [
  {name = "Ali Hassani"}
]
maintainers = [
  {name = "Ali Hassani"}
]
keywords = [
  "attention",
  "sparse attention",
  "neighborhood attention",
  "deep learning",
  "machine learning",
  "ml",
  "artificial intelligence",
  "ai",
]
requires-python = ">=3.9"
readme = {file = "docs/README_pypi.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://natten.org"
Documentation = "https://natten.org"
Repository = "https://github.com/SHI-Labs/NATTEN.git"
Changelog = "https://github.com/SHI-Labs/NATTEN/blob/main/CHANGELOG.md"

[build-system]
requires = [
  "setuptools >= 64",
  "torch",
  "cmake >= 4.0",
  "build >= 1.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["natten", "natten.*"]
