
[metadata]
name = NATTEN
description = Neighborhood Attention Extension
author = Ali Hassani
url = https://github.com/SHI-Labs/Natural-Attention-Transformer
keywords = machine learning, science, ml, artificial intelligence, ai

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]

